--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Custom VS Code generated files
+.clj-kondo
+.lsp
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
